# lindemann

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  README2.md  SECURITY.md  cookiecutter-config-file.yml  lindemann_per_frame.txt  linemann_per_frame.txt  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: auto-merge.yml  build.yml  ci.yml  codeql-analysis.yml
benchmarking/: cprofile_setup.py  synthetic_benchmark.py
docker/: Dockerfile  README.md
lindemann/: __init__.py  __main__.py  main.py  oneloop.py
lindemann/index/: mem_use.py  online_atoms.py  online_frames.py  online_trj.py  parallel_trj.py  per_atoms.py  per_frames.py  per_trj.py
lindemann/trajectory/: plt_plot.py  read.py  save.py
lindemann/trjreader/: oneloop.py
tests/test_example/: test_cli.py  test_hello.py  test_numeric.py
